--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
+    "stylelint-webpack-plugin": "^0.7.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
