--- a/package.json
+++ b/package.json
@@ -13,45 +13,46 @@
     "test": "jest --watch"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.1",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.1",
+    "autoprefixer": "^7.1.3",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^21.0.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "case-sensitive-paths-webpack-plugin": "^2.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "clean-webpack-plugin": "^0.1.16",
-    "cross-env": "^4.0.0",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
-    "image-webpack-loader": "^3.3.0",
-    "jest": "^19.0.2",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
-    "style-loader": "^0.16.1",
-    "stylelint-webpack-plugin": "^0.7.0",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "image-webpack-loader": "^3.4.2",
+    "jest": "^21.0.1",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "style-loader": "^0.18.2",
+    "stylelint": "^8.1.1",
+    "stylelint-webpack-plugin": "^0.9.0",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "next",
-    "react-redux": "^5.0.4",
-    "react-test-renderer": "^15.5.4",
-    "redux": "^3.6.0"
+    "react-redux": "^5.0.6",
+    "react-test-renderer": "^15.6.1",
+    "redux": "^3.7.2"
   },
   "jest": {
     "verbose": true,
